--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <ul>
+            <li>Inicio</li>
+            <li>Ayuda</li>
+        </ul>
+    </header>
     
 </body>
 </html>
